--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    font-family: 'Open Sans';
+    font-family: Segoe UI, Calibri, Sans-Serif;
 }
 
 .portail {
@@ -72,7 +72,9 @@ input[type='submit']:hover {
 #layout header {
     position: fixed;
     top: 0;
+    z-index: 1;
     width: 100%;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 #layout #layout-head {
@@ -117,22 +119,19 @@ input[type='submit']:hover {
     background-color: #0a4696;
 }
 
- #layout .tuile-container a {
-    font-size: 12px;
-    color: #ffffff;
-    text-decoration: none;
-    line-height: 14px;
-    user-select: none;
-}
-
 #layout .tuile {
     margin: 2px 0;
     display: inline-block;
     vertical-align: top;
+    line-height: 14px;
     width: 110px;
     height: 110px;
     text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    color: #ffffff;
     background-color: #0d5ec9;
+    user-select: none;
     cursor: pointer;
     transition: 0.1s;
 }
@@ -183,57 +182,62 @@ input[type='submit']:hover {
 #page-content {
     margin-top: 50px;
 }
-/*debut css page index*/
-#indexNav {
-    background-image: url(Images/cegep-index.png);
-    position:fixed;
-    top:auto;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index:-1;
-    display: -webkit-box;
-    -webkit-box-pack: center;
-    -webkit-box-align: center;
-    background-repeat:no-repeat;
-    background-size:cover;
-    box-shadow:inset 0 0 0 1000px rgba(0,0,0,0.7);
-    background-position:center;
 
-    
+#accueil {
+    padding-bottom: 30px;
+    width: 100%;
+    min-height: calc(100vh - 50px);
+    text-align: center;
+    background: url(Images/cegep-index.png) no-repeat center center;
+    background-size: cover;
 }
 
-    #indexNav .index-tuile {
-        margin: 2px 0;
-        padding-top:25px;
-        display: inline-block;
-        vertical-align: top;
-        width: 175px;
-        height: 175px;
-        text-align: center;
-        z-index:1;
-        cursor: pointer;
-        transition: 0.1s;
-       
-    }
-#indexNav .tuile-container a {
-    font-size: 15px;
+#accueil h1 {
+    padding: 125px 0 25px;
+    font-size: 5em;
+    font-family: Segoe UI Light, Calibri, Sans-Serif;
     color: #ffffff;
-    text-decoration: none;
-    line-height: 14px;
-    user-select: none;
-    z-index:1;
-}
-#indexNav .index-tuile .glyphicon {
-    margin: 15px 0 10px;
-    font-size: 70px;
-}
-#indexNav .layers .index-tuile:hover {
-    background-color: #083a7c;
-    z-index:1;
-}
-body, html{
-    height:100%;
-    
 }
 
+#accueil .icon {
+    margin: 35px;
+    padding-top: 25px;
+    display: inline-block;
+    vertical-align: top;
+    line-height: 20px;
+    width: 180px;
+    height: 180px;
+    text-align: center;
+    font-size: 18px;
+    text-decoration: none;
+    color: #ffffff;
+    cursor: pointer;
+    transition: 0.1s;
+    user-select: none;
+}
+
+#accueil .icon:hover {
+    transform: scale(1.1, 1.1);
+}
+
+#accueil .icon:active {
+    transform: scale(1, 1);
+}
+
+#accueil .icon .glyphicon {
+    margin-bottom: 10px;
+    font-size: 92px;
+}
+
+@media (max-width: 767px) {
+    #accueil h1 {
+        padding: 25px 0;
+        font-size: 3em;
+    }
+
+    #accueil .icon {
+        margin: 0 5px;
+        width: 140px;
+        height: 180px;
+    }
+}
