--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -2,25 +2,24 @@
     ViewBag.Title = "index";
 }
 
-<div id="indexNav">
-    <div class="layers">
-        <div class="tuile-container">
-            <a class="index-tuile">
-                <span class="glyphicon glyphicon-education"></span>
-                <p>Gestion des programmes</p>
-            </a>
-            <a class="index-tuile">
-                <span class="glyphicon glyphicon-briefcase"></span>
-                <p>Stage</p>
-            </a>
-            <a class="index-tuile">
-                <span class="glyphicon glyphicon-tasks"></span>
-                <p>Liste des compétences</p>
-            </a>
-            <a class="index-tuile">
-                <span class="glyphicon glyphicon-cog"></span>
-                <p>Console d'administration</p>
-            </a>
-        </div>
+<div id="accueil">
+    <h1>Bienvenue!</h1>
+    <div class="icon-container">
+        <a class="icon">
+            <span class="glyphicon glyphicon-education"></span>
+            <p>Gestion des programmes</p>
+        </a>
+        <a class="icon">
+            <span class="glyphicon glyphicon-briefcase"></span>
+            <p>Stage</p>
+        </a>
+        <a class="icon">
+            <span class="glyphicon glyphicon-tasks"></span>
+            <p>Liste des compétences</p>
+        </a>
+        <a class="icon">
+            <span class="glyphicon glyphicon-cog"></span>
+            <p>Console d'administration</p>
+        </a>
     </div>
 </div>
