--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
@@ -21,6 +21,7 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-8 col-sm-6 col-sm-offset-6 col-sx-12 portail-login">
                 <img class="logo-portail" src="~/Content/Images/portail-logo.png" />
+                @Html.ActionLink("S’inscrire", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
                 @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                 {
                     @Html.AntiForgeryToken()
