--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
                 <div id="layout-head" class="clearfix">
                     <button type="button" id="nav-button" data-toggle="collapse" data-target="#nav"><span class="glyphicon glyphicon-th"></span></button>
                     <a><div class="header-logo"><!----></div></a>
+                    @Html.Partial("_LoginPartial")
                 </div>
             </div>
             <nav id="nav" class="collapse">
