ajout customAuthorize + ajout controller Error plus views + connection fonctionnel avec les comptes

--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -17,7 +17,7 @@
             <span class="glyphicon glyphicon-tasks"></span>
             <p>Liste des compétences</p>
         </a>
-        <a class="icon">
+        <a class="icon" href='@Url.Action("indexConsole", "Console")'>
             <span class="glyphicon glyphicon-cog"></span>
             <p>Console d'administration</p>
         </a>
