--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -5,21 +5,31 @@
 <div id="accueil">
     <h1>Bienvenue!</h1>
     <div class="icon-container">
-        <a class="icon">
-            <span class="glyphicon glyphicon-education"></span>
-            <p>Gestion des programmes</p>
-        </a>
-        <a class="icon">
-            <span class="glyphicon glyphicon-briefcase"></span>
-            <p>Stage</p>
-        </a>
-        <a class="icon">
-            <span class="glyphicon glyphicon-tasks"></span>
-            <p>Liste des compétences</p>
-        </a>
-        <a class="icon" href='@Url.Action("indexConsole", "Console")'>
-            <span class="glyphicon glyphicon-cog"></span>
-            <p>Console d'administration</p>
-        </a>
+        @if (User.IsInRole("RCP"))
+        {
+
+            <a class="icon">
+                <span class="glyphicon glyphicon-education"></span>
+                <p>Gestion des programmes</p>
+            </a>
+        }
+        @if (User.IsInRole("Enseignant,Gestionnaire de stage"))
+        {
+            <a class="icon">
+                <span class="glyphicon glyphicon-briefcase"></span>
+                <p>Stage</p>
+            </a>
+        }
+        @if (User.IsInRole("Admin"))
+        {
+            <a class="icon" href='@Url.Action("indexConsole", "Console")'>
+                <span class="glyphicon glyphicon-cog"></span>
+                <p>Console d'administration</p>
+            </a>
+        }
+
+
+
+
     </div>
 </div>
