--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Error/AccessDenied.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Error/AccessDenied.cshtml
@@ -7,4 +7,9 @@
 
 <h2>Accès refusé</h2>
 
+<a class="tuile" href='@Url.Action("Index", "Accueil")'>
+    <span class="glyphicon glyphicon-home"></span>
+    <p>Accueil</p>
+</a>
+
 
