--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
@@ -20,6 +20,11 @@
             </div>
             <nav id="nav" class="collapse">
                 <div class="tuile-container">
+
+                    <a class="tuile" href='@Url.Action("Index", "Accueil")'>
+                        <span class="glyphicon glyphicon-home"></span>
+                        <p>Accueil</p>
+                    </a>
                 @if (User.IsInRole("RCP"))
                 {
                     <a class="tuile"  href='@Url.Action("indexCompetence", "Competence")'>
