--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -14,7 +14,7 @@
                 <p>Gestion des programmes</p>
             </a>
         }
-        @if (User.IsInRole("Enseignant,Gestionnaire de stage"))
+        @if (User.IsInRole("Enseignant")||User.IsInRole("Gestionnaire de stage"))
         {
             <a class="icon" href='@Url.Action("indexStage", "Stage")'>
                 <span class="glyphicon glyphicon-briefcase"></span>
