ajout du bouton accueil et de pouvoir voir acceuil

--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Shared/_Layout.cshtml
@@ -20,6 +20,10 @@
             </div>
             <nav id="nav" class="collapse">
                 <div class="tuile-container">
+                    <a class="tuile" href='@Url.Action("index", "Accueil")'>
+                        <span class="glyphicon glyphicon-education"></span>
+                        <p>Accueil</p>
+                    </a>
                 @if (User.IsInRole("RCP"))
                 {
                     <a class="tuile"  href='@Url.Action("indexCompetence", "Competence")'>
@@ -27,7 +31,7 @@
                         <p>Gestion des programmes</p>
                     </a>
                 }
-                @if (User.IsInRole("Enseignant,Gestionnaire de stage"))
+                @if (User.IsInRole("Enseignant") || User.IsInRole("Gestionnaire de stage"))
                 {
                     <a class="tuile" href='@Url.Action("indexStage", "Stage")'>
                         <span class="glyphicon glyphicon-briefcase"></span>
