--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
@@ -4,21 +4,5 @@
 }
 
 <div id="programme">
-    <div id="tree-view">
-
-        @foreach (var programme in Model)
-        {
-            @Html.DisplayFor(p => programme.nom);
-
-            foreach (var enonceCompetence in programme.EnonceCompetence)
-            {
-                @Html.DisplayFor(enc => enonceCompetence.enonceCompetence1);
-
-                foreach (var elementCompetence in enonceCompetence.ElementCompetence)
-                {
-                    @Html.DisplayFor(elc => elementCompetence.element);
-                }
-            }
-        }
-    </div>
+    @{ Html.RenderAction("TreeView"); }
 </div>
