--- a/Solution Eddy/LaboGestionProgrammeBdFirst/LaboGestionProgrammeBdFirst/Views/tblProgrammes/Delete.cshtml
+++ b/Solution Eddy/LaboGestionProgrammeBdFirst/LaboGestionProgrammeBdFirst/Views/tblProgrammes/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.nbUnité)
+            @Html.DisplayNameFor(model => model.nbUnite)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.nbUnité)
+            @Html.DisplayFor(model => model.nbUnite)
         </dd>
 
         <dt>
@@ -60,19 +60,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.formationGeneral)
+            @Html.DisplayNameFor(model => model.nbHeurefrmGenerale)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.formationGeneral)
+            @Html.DisplayFor(model => model.nbHeurefrmGenerale)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.formationSpecifique)
+            @Html.DisplayNameFor(model => model.nbHeurefrmSpecifique)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.formationSpecifique)
+            @Html.DisplayFor(model => model.nbHeurefrmSpecifique)
         </dd>
 
         <dt>
