--- a/Solution Eddy/LaboGestionProgrammeBdFirst/LaboGestionProgrammeBdFirst/Views/tblProgrammes/Create.cshtml
+++ b/Solution Eddy/LaboGestionProgrammeBdFirst/LaboGestionProgrammeBdFirst/Views/tblProgrammes/Create.cshtml
@@ -40,10 +40,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.nbUnité, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.nbUnite, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.nbUnité, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.nbUnité, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.nbUnite, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.nbUnite, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -64,18 +64,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.formationGeneral, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.nbHeurefrmGenerale, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.formationGeneral, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.formationGeneral, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.nbHeurefrmGenerale, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.nbHeurefrmGenerale, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.formationSpecifique, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.nbHeurefrmSpecifique, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.formationSpecifique, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.formationSpecifique, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.nbHeurefrmSpecifique, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.nbHeurefrmSpecifique, "", new { @class = "text-danger" })
             </div>
         </div>
 
