--- a/Solution Eddy/LaboGestionProgrammeBdFirst/LaboGestionProgrammeBdFirst/Views/tblProgrammes/Index.cshtml
+++ b/Solution Eddy/LaboGestionProgrammeBdFirst/LaboGestionProgrammeBdFirst/Views/tblProgrammes/Index.cshtml
@@ -28,7 +28,7 @@
             @Html.DisplayNameFor(model => model.codeSpecialisation)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.nbUnité)
+            @Html.DisplayNameFor(model => model.nbUnite)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.specialisation)
@@ -37,10 +37,10 @@
             @Html.DisplayNameFor(model => model.nom)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.formationGeneral)
+            @Html.DisplayNameFor(model => model.nbHeurefrmGenerale)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.formationSpecifique)
+            @Html.DisplayNameFor(model => model.nbHeurefrmSpecifique)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.condition)
@@ -69,7 +69,7 @@
             @Html.DisplayFor(modelItem => item.codeSpecialisation)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.nbUnité)
+            @Html.DisplayFor(modelItem => item.nbUnite)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.specialisation)
@@ -78,10 +78,10 @@
             @Html.DisplayFor(modelItem => item.nom)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.formationGeneral)
+            @Html.DisplayFor(modelItem => item.nbHeurefrmGenerale)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.formationSpecifique)
+            @Html.DisplayFor(modelItem => item.nbHeurefrmSpecifique)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.condition)
@@ -96,9 +96,9 @@
             @Html.DisplayFor(modelItem => item.tblCodeProgramme.code)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.ActionLink("Edit", "Edit", new { id=item.idCodeProgramme }) |
+            @Html.ActionLink("Details", "Details", new { id=item.idCodeProgramme }) 
+            @* @Html.ActionLink("Delete", "Delete", new { id=item.idCodeProgramme }) *@
         </td>
     </tr>
 }
