Finition de création programme

--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <div id="submit" class="form-group">
-                            <input type="submit" value="Connexion" class="btn btn-default" />
+                            <input type="submit" value="Connexion" />
                         </div>
                         <p id="forgot-password">
                             @Html.ActionLink("Vous avez oublié votre mot de passe ?", "ForgotPassword")
