--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
@@ -4,5 +4,6 @@
 }
 
 <div id="programme">
-    @{ Html.RenderAction("TreeView"); }
+    <h1>Programme</h1>
+    @*@{ Html.RenderAction("TreeView"); }*@
 </div>
