--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
@@ -12,6 +12,11 @@
     }
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0 15px;
+    font-family: Segoe UI Light, Calibri Light, Sans-Serif;
+}
+
 input, button {
     outline: 0;
 }
@@ -22,12 +27,17 @@ input, button {
     box-shadow: none;
 }
 
+.text-danger {
+    color: #ce0000;
+}
+
 .small-input {
     width: 100px;
 }
 
 input[type='submit'], .fancy-button {
     margin: 0 15px;
+    padding: 5px 15px;
     display: inline-block;
     border: 2px solid;
     border-radius: 0;
@@ -37,9 +47,19 @@ input[type='submit'], .fancy-button {
     transition: 0.1s;
 }
 
+.fancy-button.cancel {
+    color: #ce0000;
+}
+
 input[type='submit']:hover, .fancy-button:hover {
     border-color: #083a7c;
     background-color: #083a7c;
+    color: #ffffff;
+}
+
+.fancy-button.cancel:hover {
+    border-color: #ce0000;
+    background-color: #ce0000;
     color: #ffffff;
 }
 
@@ -55,6 +75,10 @@ input[type='submit']:hover, .fancy-button:hover {
     border-bottom: 1px solid #aaaaaa;
 }
 
+.single-action {
+    margin-top: 75px;
+}
+
 .crud-list table {
     width: 100%;
     border-collapse: separate;
@@ -66,12 +90,16 @@ input[type='submit']:hover, .fancy-button:hover {
 }
 
 .crud-list th {
-    font-size: 12px;
     font-weight: normal;
 }
 
 .crud-list td {
     background-color: #e7ecf2;
+    transition: 0.1s;
+}
+
+.crud-list .valide:hover td {
+    background-color: #eef2f6;
 }
 
 .crud-list button {
@@ -86,6 +114,10 @@ input[type='submit']:hover, .fancy-button:hover {
 
 .crud-list .action-cell {
     text-align: center;
+    background-color: #e7ecf2;
+}
+
+.crud-list .valide .action-cell {
     background-color: #eef2f6;
 }
 
