--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Edit.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Edit.cshtml
@@ -4,48 +4,57 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Modification</h2>
+<div class="container">
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+    <div class="single-action col-md-offset-2 col-md-8">
 
-    <div class="form-horizontal">
-        <h4>Programme</h4>
-        <hr/>
-        <label id="Error">@ViewBag.messageError</label>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.idProgramme)
+        <div class="form-box">
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.EnteteProgramme, "EnteteProgramme", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control", @id = "ddlCode" })
-                @Html.ValidationMessageFor(model => model.EnteteProgramme, "", new { @class = "text-danger" })
-            </div>
-        </div>
+            <h3>Modification d'un programme</h3>
+            <hr />
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
-            </div>
-        </div>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.codeSpecialisation, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.codeSpecialisation, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-horizontal">
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button class="btn btn-default" onclick="location.href='@Url.Action("Create", "Programme")'">Annuler</button>
-                <input type="submit" value="Enregistrer" class="btn btn-default" />
-            </div>
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.HiddenFor(model => model.idProgramme)
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.EnteteProgramme, htmlAttributes: new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.EnteteProgramme, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input" } })
+                            @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.codeSpecialisation, htmlAttributes: new { @class = "control-label col-md-3" })
+                        <div class="col-md-9">
+                            @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control small-input" } })
+                            @Html.ValidationMessageFor(model => model.codeSpecialisation, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-3">
+                            <input type="submit" value="Enregistrer" />
+                            <button class="fancy-button cancel" onclick="location.href='@Url.Action("Create", "Programme")'">Annuler</button>
+                        </div>
+                    </div>
+                </div>
+            }
+            
         </div>
     </div>
-}
+</div>
