--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Content/extend.css
@@ -44,6 +44,7 @@ input[type='submit'], .fancy-button {
     color: #083a7c;
     background-color: transparent;
     font-size: 1.2em;
+    cursor: pointer;
     transition: 0.1s;
 }
 
