--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
@@ -58,7 +58,7 @@
                     }
                 </div>
                 <div id="associes" class="clearfix">
-                    <a class="col-xs-6"><img src="~/Content/Images/dicj-logo.png" /></a>
+                    <a class="col-xs-6" href="http://dicj.info/"><img src="~/Content/Images/dicj-logo.png" /></a>
                     <a class="col-xs-6" href="http://www.cegepjonquiere.ca/"><img src="~/Content/Images/cj-logo.png" /></a>
                 </div>
             </div>
