--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Create.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Create.cshtml
@@ -1,31 +1,27 @@
 ﻿@model ApplicationPlanCadre.Models.Programme
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Console d'administration";
 }
 
-<div class="container">
-
-    <div class="single-action col-md-offset-2 col-md-8">
-
+<div id="console-programme" class="container">
+    <div class="col-md-6">
         <div class="form-box">
 
-            <h3>Modification d'un programme</h3>
+            <h3>Ajouter un programme</h3>
             <hr />
 
-            @using (Html.BeginForm())
+            @using (Html.BeginForm(FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
 
                 <div class="form-horizontal">
-
+                    <p class="text-danger">@ViewBag.messageError</p>
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.idProgramme)
-
                     <div class="form-group">
                         @Html.LabelFor(model => model.EnteteProgramme, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.DropDownList("codeProgramme", null, htmlAttributes: new { @class = "form-control"})
                             @Html.ValidationMessageFor(model => model.EnteteProgramme, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -33,7 +29,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input" } })
+                            @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 4, @onkeydown= "return (!(event.keyCode>=65) && event.keyCode!=32);" } })
                             @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -41,7 +37,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.codeSpecialisation, htmlAttributes: new { @class = "control-label col-md-3" })
                         <div class="col-md-9">
-                            @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control small-input" } })
+                            @Html.EditorFor(model => model.codeSpecialisation, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 2 } })
                             @Html.ValidationMessageFor(model => model.codeSpecialisation, "", new { @class = "text-danger" })
                         </div>
                     </div>
@@ -49,12 +45,25 @@
                     <div class="form-group">
                         <div class="col-md-offset-3">
                             <input type="submit" value="Enregistrer" />
-                            <button class="fancy-button cancel" onclick="location.href='@Url.Action("Create", "Programme")'">Annuler</button>
                         </div>
                     </div>
                 </div>
             }
-            
         </div>
     </div>
+    <div class="col-md-6">
+        @Html.Action("_PartialList")
+    </div>
+
+    @*<script src="../../Scripts/jquery-1.10.2.min.js" type="text/javascript"></script>
+        <script type="text/javascript">
+            $(function () {
+                $('#pass2').click(function () {
+                    $.get('@Url.Action("_PartialView", "Programme")', function (data) {
+                        $('#tableProgramme').replaceWith(data);
+                    });
+                });
+            });
+        </script>*@
+    
 </div>
