--- a/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
+++ b/Sprint 1/Package  - Portail/Code/Source/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
@@ -23,7 +23,7 @@
         @foreach (var item in Model)
         {
             bool valide = item.EnonceCompetence.Count == 0;
-            string dblclickEvent = valide ? Url.Action("Edit", "Programme", new { id = item.idProgramme }) : "";
+            string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idProgramme }) : @Url.Action("Create");
             string cssClass = valide ? "valide" : "";
             <tr ondblclick="location.href='@dblclickEvent'" class="@cssClass">
                 <td>
@@ -38,7 +38,7 @@
                 <td class="action-cell">
                     @if (valide)
                     {
-                        <button onclick="location.href='@Url.Action("Edit", "Programme", new { id = item.idProgramme })'">
+                        <button onclick="location.href='@Url.Action("Edit", new { id = item.idProgramme })'">
                             <span class="glyphicon glyphicon-pencil"><!----></span>
                         </button>
                     }
@@ -46,7 +46,7 @@
                 <td class="action-cell">
                     @if(valide)
                     {
-                        <button onclick="location.href='@Url.Action("DeleteConfirmed", "Programme", new { id = item.idProgramme })'">
+                        <button onclick="location.href='@Url.Action("DeleteConfirmed", new { id = item.idProgramme })'">
                             <span class="glyphicon glyphicon-trash"><!----></span>
                         </button>
                     }
