--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Accueil/index.cshtml
@@ -8,21 +8,21 @@
 
         @if (User.IsInRole("RCP"))
         {
-            <a class="icon" href='@Url.Action("Index", "Programme")'>
+            <a class="icon" href='@Url.RouteUrl("Index-programme")'>
                 <span class="glyphicon glyphicon-education"></span>
                 <p>Gestion des programmes</p>
             </a>
         }
         @if (User.IsInRole("Enseignant")||User.IsInRole("Gestionnaire de stage"))
         {
-            <a class="icon" href='@Url.Action("indexStage", "Stage")'>
+            <a class="icon" href='@Url.RouteUrl("index-Stage")'>
                 <span class="glyphicon glyphicon-briefcase"></span>
                 <p>Stage</p>
             </a>
         }
         @if (User.IsInRole("Admin"))
         {
-            <a class="icon" href='@Url.Action("Create", "ConsoleProgramme")'>
+            <a class="icon" href='@Url.RouteUrl("creation-programme")'>
                 <span class="glyphicon glyphicon-cog"></span>
                 <p>Console d'administration</p>
             </a>
