--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Details.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Details.cshtml
@@ -46,7 +46,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="fancy-button cancel" onclick="location.href='@Url.Action("Index")'">Annuler</div>
-            <input type="submit" value="Modifier" onclick="location.href='@Url.Action("Edit", "Programme", new { id =Model.idProgramme })'" />
+            <input type="submit" value="Modifier" onclick="location.href='@Url.RouteUrl("edit-prog", new { id = Model.idProgramme })'" />
 
             @* Exemple de lien fonctionnel
                 <div class="edit">@Html.ActionLink("Modifier", "Edit", new { id = Model.codeProgramme })</div>
